Add Josh to web directory

--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,8 @@
 <body>
     <h1>Intro to Web Development</h1>
     <p>Here is a list of the class participants:</p>
+    <ul>
+        <li>Josh: <a href="josh.html">Webpage</a></li>
+    </ul>
 </body>
 </html>
