Add Angela to Web directory

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <p>Here is a list of the class participants:</p>
     <ul>
         <li>Josh: <a href="josh.html">Webpage</a></li>
+        <li>Angela: <a href="angela.html">Webpage</a></li>
     </ul>
 </body>
 </html>
