Add Ceirra to Web directory

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <ul>
         <li>Josh: <a href="josh.html">Webpage</a></li>
         <li>Angela: <a href="angela.html">Webpage</a></li>
+        <li>Ceirra: <a href="Ceirra.html">Webpage</a></li>
     </ul>
 </body>
 </html>
